<resources>
    <string name="app_name">AssistDoc</string>
    <string name="title_activity_main">main</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="key"> ---------- ENTER YOUR GOOGLE MAPS API KEY ----------- </string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="contact">contact</string>
    <string name="title_activity_map">Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="enter_all_fields">Please enter all fields</string>
    <string name="logged_out_successfully">Logged out successfully</string>
    <string name="share_using">Share using</string>

    <string name="title_AskRole">Role choice</string>
    <string name="AskRole_doctor">Doctor</string>
    <string name="AskRole_patient">Patient</string>
    <string name="change_lang">Change the language</string>
    <string name="phone_nb">Enter Valid Number</string>
    <string name="title_call">Emergency SOS Call</string>
    <string name="contact_consult">24/7 Consultuncy</string>
    <string name="title_disease">Mr. XX you may have...</string>
    <string name="buttom_disease">For more Information, click HERE</string>
    <string name="main_name">Enter Your Name</string>
    <string name="main_age">Enter Your Age</string>
    <string name="main_male">Male</string>
    <string name="main_female">Female</string>
    <string name="title_signin">SIGN IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_signup">SIGN UP</string>
    <string name="signin_ac">Don\'t Have An Account ?</string>
    <string name="passwordconf">Confirm Password</string>
    <string name="signup_ac">Already Have An Account ?</string>
    <string name="signup_condition">Please Accept The Privacy Policy</string>
    <string name="title_symptom">Enter Your Symptoms !</string>
    <string name="buttom_symptom">KNOW YOUR DISEASE</string>


    <string name="didn_t_tget_otp_resend" translatable="false">didn\'t get The Code?<b>Resend</b></string>
    <string name="doc_phone">Enter your phone number : +212 xxxxxxxxx</string>
    <string name="next">NEXT</string>
    <string name="doc_verif">Enter the code</string>
    <string name="buttom_doc">SUBMIT</string>

    <string name="default_web_client_id">388037631797-8crac0el55clgnhdqd7ck71gnllcm7ts.apps.googleusercontent.com</string>

    <!-- TODO: Remove or change this placeholder text -->


</resources>
