<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".AskRole">

    <ImageView
        android:id="@+id/imageVieww"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/white_halo" />

    <TextView
        android:id="@+id/doctorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="44dp"
        android:text="Who is using the app?"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view1"
        style="@style/Divider"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/black"
        android:outlineAmbientShadowColor="@color/black"
        android:outlineSpotShadowColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/doctorTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- TextView for "Doctor" above the Image -->
    <ImageView
        android:id="@+id/doctorLogin"
        android:layout_width="364dp"
        android:layout_height="431dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1"
        app:srcCompat="@drawable/role" />

    <!-- TextView for "Patient" below the Image -->

    <TextView
        android:id="@+id/doctortextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AskRole_doctor"
        android:background="@drawable/bordermain"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/doctorLogin"
        app:layout_constraintEnd_toEndOf="@id/doctorLogin"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="@id/doctorLogin" />

    <TextView
        android:id="@+id/PatienttextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AskRole_patient"
        android:textColor="@color/black"
        android:background="@drawable/bordermain"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@id/doctorLogin"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="@id/doctorLogin"
        app:layout_constraintTop_toBottomOf="@id/doctorLogin" />

    <Button
        android:id="@+id/changMyLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/alice"
        android:text="@string/change_lang"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
