<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/draw_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:theme="@style/Theme.AppCompat"
    tools:context=".patient.MainActivityPatient"
    tools:openDrawer="start"
    android:background="@color/white">




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/darkPurple"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            android:elevation="4dp"
            tools:ignore="MissingConstraints">



            <ImageView
                android:id="@+id/chat_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:padding="8dp"
                android:src="@drawable/ic_chat"
                app:tint="@android:color/white" />
        </androidx.appcompat.widget.Toolbar>



        <EditText
            android:id="@+id/nametext"
            android:layout_width="224dp"
            android:layout_height="49dp"
            android:ems="10"
            android:hint="@string/main_name"
            android:inputType="textPersonName"
            android:paddingLeft="15dp"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:layout_constraintHorizontal_bias="0.668"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.53"
            tools:ignore="Autofill,HardcodedText" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="39dp"
            android:layout_height="46dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.146"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.512"
            app:srcCompat="@drawable/name" />

        <EditText
            android:id="@+id/agetext"
            android:layout_width="224dp"
            android:layout_height="49dp"
            android:layout_marginEnd="12dp"
            android:ems="10"
            android:hint="@string/main_age"
            android:inputType="phone"
            android:paddingLeft="15sp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.712"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.628" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="46dp"
            android:layout_height="36dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.122"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.626"
            app:srcCompat="@drawable/age" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="106dp"
            android:layout_height="103dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.917"
            app:srcCompat="@drawable/enter1" />


        <RadioGroup
            android:id="@+id/rg1"
            android:layout_width="320dp"
            android:layout_height="54dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.738">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="135dp"
                android:layout_height="43dp"
                android:layout_marginLeft="29dp"
                android:buttonTint="#34B7FF"
                android:checked="false"
                android:text="@string/main_male"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.172"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/toolbar"
                app:layout_constraintVertical_bias="0.566" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="145dp"
                android:layout_height="43dp"
                android:buttonTint="#34B7FF"
                android:checked="false"
                android:paddingLeft="5dp"
                android:text="@string/main_female"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.849"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.566" />
        </RadioGroup>

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="133dp"
            android:layout_height="286dp"
            android:layout_marginStart="50dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.17"
            app:srcCompat="@drawable/women" />

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="Welcome to AssistDoc, your trusted companion for healthcare needs!"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="@id/imageView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/imageView8"
            app:layout_constraintTop_toTopOf="@id/imageView8"
            app:layout_constraintVertical_bias="0.509" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu"
        tools:ignore="MissingConstraints" />


</androidx.drawerlayout.widget.DrawerLayout>